--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -110,6 +110,10 @@
     @import 'components/dev-face';
 
 
+    // *--------- FILLING LINE ---------*
+    @import 'components/filling-line';
+
+
 // ---------------------
 //     MODULES
 // ---------------------
