--- a/src/templates/components/sections/_portfolio.pug
+++ b/src/templates/components/sections/_portfolio.pug
@@ -5,7 +5,7 @@ section(id="portfolio" class="section portfolio-wrapper")
     .container
         .row.no-gutters.flex-column.align-items-center
             .section-decoration
-                span.icon.icon-code.section-decoration-icon
+                span.icon.icon-2.icon-code.section-decoration-icon
             header.section-header
                 h2.heading.heading-2.heading-unique-1.text-center= data.mainWrapper.portfolioWrapper.header.h2
                 .heading-separator
