--- a/src/templates/components/sections/_services.pug
+++ b/src/templates/components/sections/_services.pug
@@ -5,7 +5,7 @@ section(id="services" class="section services-wrapper")
     .container
         .row.no-gutters.flex-column.align-items-center
             .section-decoration
-                span.icon.icon-wrench.section-decoration-icon
+                span.icon.icon-2.icon-wrench.section-decoration-icon
             header.section-header
                 h2.heading.heading-2.heading-unique-1.text-center= data.mainWrapper.servicesWrapper.header.h2
                 .heading-separator
