--- a/src/templates/components/sections/_contact.pug
+++ b/src/templates/components/sections/_contact.pug
@@ -5,7 +5,7 @@ section(id="contact" class="section contact-wrapper")
     .container
         .row.no-gutters.flex-column.align-items-center
             .section-decoration
-                span.icon.icon-phone.section-decoration-icon
+                span.icon.icon-2.icon-phone.section-decoration-icon
             header.section-header
                 h2.heading.heading-2.heading-unique-1.text-center= data.mainWrapper.contactWrapper.header.h2
                 .heading-separator
