--- a/src/sass/helpers/_colors.scss
+++ b/src/sass/helpers/_colors.scss
@@ -26,6 +26,7 @@ $color__persian-red: #c62828;
 $color__red-orange:  #f44336;
 $color__we-peep:     #feccd1;
 $color__denim:       #1565c0;
+$color__dodger-blue: #2196f3;
 $color__black-2:     #0a0a0a;
 $color__seal-brown:  #131313;
 $color__nero:        #212121;
