--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -37,6 +37,7 @@ $primary-color-dark:    $color__persian-red;
 $primary-color:         $color__red-orange;
 $primary-color-light:   $color__we-peep;
 $accent-color:          $color__denim;
+$accent-color-light:    $color__dodger-blue;
 $primary-text-color:    $color__nero;
 $secondary-text-color:  $color__grey;
 $tertiary-text-color:   $color__silver;
