--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -57,6 +57,10 @@
     @import 'components/buttons/buttons';
 
 
+    // *--------- COLORS ---------*
+    @import 'components/colors/colors';
+
+
     // *--------- ICONS ---------*
     @import 'components/icons/icons';
     @import 'components/icons/html-symbols-entities';
@@ -112,6 +116,10 @@
 
     // *--------- FILLING LINE ---------*
     @import 'components/filling-line';
+
+
+    // *--------- INFO ---------*
+    @import 'components/info';
 
 
 // ---------------------
