--- a/src/sass/components/_about-me.scss
+++ b/src/sass/components/_about-me.scss
@@ -3,21 +3,28 @@
 //~~~~~~~~~~~~~~~~~~~~~~~~//
 
 
-// .icon-round
+// .about-me-section-icon
 $about-me-section-icon__background-color: $primary-color !default;
 $about-me-section-icon__color: $color__white !default;
 $about-me-section-icon__box-shadow: 0 0 0 5px $color__white,
                                     0 0 8px 5px rgba($color__black-1, 0.15) !default;
+// .about-me-list-titled
+$about-me-list-titled__color: $accent-color-light !default;
+// .about-me-list-titled::before
+$about-me-list-titled__before__font-size: 18px !default;
+$about-me-list-titled__before__font-weight: $font-weight__bolder-8 !default;
+// .about-me-list-titled::after
+$about-me-list-titled__after__border: 40px solid $accent-color-light !default;
 
 
 .about-me {
     &-wrapper {
-        padding-bottom: 119px;
+        padding-bottom: 144px;
     }
     &-section {
-        padding: 25px 0 35px;
+        padding: 25px 0 10px;
         &-header {
-            padding-bottom: 10px;
+            padding-bottom: 15px;
         }
         &-icon {
             &::before {
@@ -34,6 +41,57 @@ $about-me-section-icon__box-shadow: 0 0 0 5px $color__white,
         }
         &-body {
             padding-left: 89px;
+        }
+    }
+    &-list {
+        list-style: none;
+        @extend %no-padding-margin;
+        & > li {
+            padding: 1.5em 0;
+            &:first-child {
+                padding-top: 0.75em;
+            }
+            &:last-child {
+                padding-bottom: 0.75em;
+            }
+        }
+        &-titled {
+            // sass-lint:disable no-important
+            padding-left: 28px !important;
+            // sass-lint:enable no-important
+            &::before,
+            &::after {
+                height: 100%;
+                position: absolute;
+                top: 0;
+            }
+            &::before {
+                content: attr(data-title);
+                width: 56px;
+                line-height: 56px;
+                left: -28px;
+                transform: rotate(180deg);
+                font-size: $about-me-list-titled__before__font-size;
+                font-weight: $about-me-list-titled__before__font-weight;
+                text-align: center;
+                text-orientation: sideways-right;
+                writing-mode: vertical-rl;
+                color: $about-me-list-titled__color;
+            }
+            &::after {
+                content: "";
+                width: 1px;
+                left: 0.5px;
+                border-top: $about-me-list-titled__after__border;
+                border-bottom: $about-me-list-titled__after__border;
+            }
+        }
+    }
+    &-link {
+        text-decoration: none;
+        color: inherit;
+        &:hover {
+            text-decoration: underline;
         }
     }
 }
